<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY appname "ScreenX">
    <!ENTITY author "Pavan Tirumani">
    ]>

<resources>
    <string name="app_name">&appname;</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    // Search
    <string name="search_hint">Search</string>

    // Permissions
    <string name="grant_permissions">Grant Permissions</string>
    <string name="permissions_granted">Granted!</string>
    <string name="storage_permission_title">Storage</string>
    <string name="storage_permission_description">Storage permission is needed to access your screenshots.</string>
    <string name="usage_permission_title">Usage Access</string>
    <string name="usage_permission_description">Usage permission is needed to organize screenshots into app groups.</string>

    // On Boarding Screens
    <string name="onboarding_theproblem_title1">Have </string>
    <string name="onboarding_theproblem_title2">too many screenshots ?</string>
    <string name="onboarding_theproblem_description">We made this app to search them all and keep them organized</string>

    <string name="onboarding_search_title1">Search</string>
    <string name="onboarding_search_title2">using text in screenshot</string>
    <string name="onboarding_search_description">type a word in search bar and find all screenshots which contain that word</string>

    <string name="onboarding_organize_title1">Sort</string>
    <string name="onboarding_organize_title2">by app</string>
    <string name="onboarding_organize_description">every app has a separate folder into which all of its screenshots go</string>

    <string name="overlay_permission_text">Grant Overlay permissions</string>

    <string name="snackbar_disable">Screenshot feature disabled</string>
    <string name="snackbar_enable">Screenshot feature enabled</string>
    <string name="screenshot_feedback">Screenshot taken!</string>

    <string name="notification_default_title">Screenshot sorting is on</string>
    <string name="notification_display_text">Tap to view your screenshots.</string>
    <string name="notification_action_stop">Stop</string>

    <string name="miscellaneous_app_name">Miscellaneous</string>
    <string name="service_description"> This service helps you sort your screenshots</string>

    <!-- Usage Settings Dialog for devices that do not support usage setting intent-->
    <string name = "usage_settings_confirm">Go To Settings</string>

    <!-- Delete Dialog-->
    <string name="delete_confirm">Confirm</string>
    <string name="delete_cancel">Cancel</string>

    <!-- Detail Page-->
    <string name="detail_date">Date</string>
    <string name="detail_appname">App</string>
    <string name="detail_name">Name</string>
    <string name="detail_path">Path</string>
    <string name="detail_size">Size</string>
</resources>
